# CppEditor

./: CMakeLists.txt  COPYING  CppEditor.xml  Readme.md  bsd-install.sh  build-winbin.bat  build-windows.bat  install-linux.sh  license_header.txt  setup.iss
doc/: translator_read_this.html  windows_dependencies.txt
highlighter/: CMakeLists.txt  Makefile  languagedata.cpp  languagedata.h  mainwindow.cpp  qsourcehighliter.cpp  qsourcehighliter.h  qsourcerepository.h
highlighter/language/: TEMPLATE.cpp  cmake_lang.cpp  cpp_lang.cpp  cs_lang.cpp  css_lang.cpp  go_lang.cpp  java_lang.cpp  js_lang.cpp  json_lang.cpp  lua_lang.cpp  make_lang.cpp  php_lang.cpp  py_lang.cpp  qml_lang.cpp  rust_lang.cpp  sh_lang.cpp  sql_lang.cpp  ts_lang.cpp  v_lang.cpp  vex_lang.cpp  vhdl_lang.cpp  x86_lang.cpp  yaml_lang.cpp
share/: cpp-editor.desktop
src/: CMakeLists.txt  actions.cxx  cpp_message_widget.cxx  cpp_message_widget.hh  editor.cxx  editor.hh  editor.hpp  finder.cxx  finder.hh  format_toolbar.cxx  format_toolbar.hh  global.hh  global.hpp  icon.cxx  icons.qrc  ipc.cxx  ipc.hh  ipc.hpp  lang.qrc  macros.hh  main.cxx  main_toolbar.cxx  main_toolbar.hh  rsc.qrc  tabpane.cxx  tabpane.hh  utils.cxx  utils.hpp  window.cxx  window.hh  window.hpp
src/actions/: action.cxx  action.hh  actions.cxx  actions.hh  copyAction.cxx  copyAction.hh  cutAction.cxx  cutAction.hh  pasteAction.cxx  pasteAction.hh  redoAction.cxx  redoAction.hh  selectAllAction.cxx  selectAllAction.hh  undoAction.cxx  undoAction.hh
src/finder/: finder.cxx  finder.hh  finder_toolbar.cxx  finder_toolbar.hh
src/global/: css.cxx  css.hh  file_actions.cxx  recent.cxx  slots.cxx
src/lang/: lang-dialog.cxx  lang-dialog.hh  lang-manager.cxx  lang-manager.hh  lang-parser.cxx  lang-parser.hh
src/lang/rsc/: afrikaans.xml  available.txt  deutsche.xml  english.xml  espanol.xml  esperanto.xml  italiano.xml  nederlands.xml  svenska.xml
src/menubar/: editmenu.cxx  editmenu.hh  filemenu.cxx  filemenu.hh  helpmenu.cxx  helpmenu.hh  insertmenu.cxx  insertmenu.hh  recent_widgets.cxx  settingsmenu.cxx  settingsmenu.hh  template_menu.cxx  template_menu.hh  viewmenu.cxx  viewmenu.hh  windows_menu.cxx  windows_menu.hh
src/menus/: dock_widget_menu.cxx  editor_context.cxx  editor_context.hh  project_new_item_menu.cxx  project_new_item_menu.hh  system_tray_menu.cxx  system_tray_menu.hh
src/project/: project_pane.cxx  project_pane.hh  project_parser.cxx  project_parser.hh  project_tree.cxx  project_tree.hh
src/rsc/: ipc_dialog_msg.html  license.txt  settings_default.xml
src/settings/: editor_page.cxx  editor_page.hpp  settings_dialog.cxx  settings_dialog.hh  systray_page.cxx  systray_page.hh  systray_page.ui
src/template/: template.cxx  template.hh
src/windows/: console.hh  date_selector.cxx  date_selector.hh  subwindow.cxx
src/windows/console/: console_win.cxx  console_win.hh  process.cxx  process.hh
templates/: Readme.md  translation_template.xml
templates/flex-bison/: CMakeLists.txt  Readme.md  file.txt  grammar.y  main.cpp  scanner.ll
themes/: gray.css  green.css  metal.css  winter.css
